...
                        verticalAlignment = Alignment.CenterVertically,
                        horizontalArrangement = Arrangement.spacedBy(2.dp)
                    ) {
                        Text(text = title, style = MaterialTheme.typography.titleLarge)
                        Icon(
                            imageVector = Icons.Default.ArrowDropDown,
                            contentDescription = "Open library selector"
                        )
                    }
                } else {
                    Text(text = title, style = MaterialTheme.typography.titleLarge)
                }
            }
...
